--- a/AppArquitetura/estilos.css
+++ b/AppArquitetura/estilos.css
@@ -1,3 +1,13 @@
 #paineis-sobre{
     margin-top: 20px;
 }
+
+.titulo-depoimentos {
+    background-color: #0275D8;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 10px;
+    color:#FFF;
+    margin-bottom: 0;
+    font-size: 24 px;
+}
