--- a/AppArquitetura/estilos.css
+++ b/AppArquitetura/estilos.css
@@ -32,6 +32,17 @@ header h1 {
     margin-top: 20px;
 }
 
+
+@media(min-width: 768px) {
+    .colunas-2 {
+        width: 50%;
+        float: left;
+    }
+    #paineis-sobre {
+        margin-top: 0;
+    }
+}
+
 .titulo-depoimentos {
     background-color: #0275D8;
     padding-top: 25px;
